fixing svg icons in safari; adding blurred blobs to projects section

--- a/src/components/Projects/Project/Project.css
+++ b/src/components/Projects/Project/Project.css
@@ -40,6 +40,7 @@
         gap: 0.4rem;
         .icon {
           width: 2rem;
+          height: 2rem;
           display: flex;
         }
   
